# moo

./: Dockerfile  pyproject.toml
docs/: prd.md
src/: app.py  cli.py  model.py  moo.py  store.py  viewer.py
src/cli/: handler.py  viewer.py
src/models/: moo.py
src/moo/: __main__.py  exceptions.py  utils.py
src/moo/cli/: handler.py  viewer.py
src/moo/models/: moo.py
src/moo/stores/: fs.py
src/stores/: fs.py
tests/: conftest.py  test_model.py  test_moo.py
tests/models/: test_moo.py
tests/moo/models/: test_moo.py
