[tool.poetry]
name = "moo"
version = "0.1.0"
description = ""
authors = ["krkettle57 <krkettle57@gmail.com>"]
packages = [
  { include = "moo", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
dataclasses-json = "^0.5.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.6b0"
isort = "^5.9.1"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
moo = "moo.__main__:main"